Update GitHub Actions workflow to rename deploy job to build and add necessary permissions

--- a/.github/workflows/deploy-everything.yaml
+++ b/.github/workflows/deploy-everything.yaml
@@ -6,8 +6,11 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+        contents: read #This is required for actions/checkout
+        id-token: write #This is required for requesting the JWT
 
     steps:
     - name: Checkout repository
