--- a/.github/workflows/deploy-everything.yaml
+++ b/.github/workflows/deploy-everything.yaml
@@ -29,4 +29,4 @@ jobs:
             --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} \
             --location 'southcentralus' \
             --name dotnetcore-wheresmydevice-deploy \
-            --parameters ./iac/bicep/main.dev.bicepparam
+            --parameters ./iac/bicep/main.bicepparam
