--- a/.github/workflows/deploy-everything.yaml
+++ b/.github/workflows/deploy-everything.yaml
@@ -29,4 +29,7 @@ jobs:
             --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} \
             --location 'southcentralus' \
             --name dotnetcore-wheresmydevice-deploy \
+            --template-file ./iac/bicep/main.bicep \
+            --parameters subscriptionId=${{ secrets.AZURE_SUBSCRIPTION_ID }} \
+            --parameters resourceGroupName=${{ vars.AZURE_RESOURCE_GROUP }} \
             --parameters ./iac/bicep/main.bicepparam
