--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,15 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
